Added domotica service, refresher, login etc

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,9 @@
               },
               {
                 "input": "src/global.scss"
+              },
+              {
+                "input": "src/theme/custom.scss"
               }
             ],
             "scripts": []
