--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "app",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "angular",
   "id": "3a39e3b8"
 }
